# BluePrintHub

./: design_doc.md
blueprinthub/: .gitignore  README.md  pyproject.toml
blueprinthub/blueprinthub/: cli.py  core.py  github.py  templates.py  utils.py  wizard.py
blueprinthub/starter_templates/data_science/: .template.yml  pyproject.toml
blueprinthub/starter_templates/data_science/{{ name }}/: main.ipynb
blueprinthub/starter_templates/fastapi_app/: .template.yml  pyproject.toml
blueprinthub/starter_templates/fastapi_app/{{ name }}/: main.py
blueprinthub/starter_templates/flask_api/: .template.yml  pyproject.toml
blueprinthub/starter_templates/flask_api/{{ name }}/: app.py
blueprinthub/starter_templates/python_cli/: .template.yml  pyproject.toml
blueprinthub/starter_templates/python_cli/{{ name }}/: cli.py
blueprinthub/tests/: test_cli.py  test_core.py  test_github.py  test_templates.py  test_wizard.py
blueprinthub/tests/python_cli/: pyproject.toml
blueprinthub/tests/python_cli/mycli/: cli.py
