[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ name }}"
version = "0.1.0"
description = "Data science project with sample analysis"
readme = "README.md"
authors = [
    {name = "Author", email = "author@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "jupyter>=1.0.0",
    {% for lib in libraries %}
    {% if lib == "matplotlib" %}
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    {% elif lib == "scikit-learn" %}
    "scikit-learn>=1.0.0",
    {% elif lib == "plotly" %}
    "plotly>=5.0.0",
    {% elif lib == "tensorflow" %}
    "tensorflow>=2.8.0",
    {% elif lib == "pytorch" %}
    "torch>=1.10.0",
    "torchvision>=0.11.0",
    {% elif lib == "nltk" %}
    "nltk>=3.6.0",
    {% elif lib == "opencv" %}
    "opencv-python>=4.5.0",
    {% endif %}
    {% endfor %}
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "nbconvert>=6.0.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"