[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ name }}"
version = "0.1.0"
description = "Flask API with REST endpoints"
readme = "README.md"
authors = [
    {name = "Author", email = "author@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Flask",
]
dependencies = [
    "flask>=2.0.0",
    "flask-sqlalchemy>=3.0.0",
    {% if database == "postgresql" %}
    "psycopg2-binary>=2.9.0",
    {% elif database == "mysql" %}
    "pymysql>=1.0.0",
    {% endif %}
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.9.0",
    "pytest-flask>=1.2.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true