[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ name }}"
version = "0.1.0"
description = "Command line interface application"
readme = "README.md"
authors = [
    {name = "Author", email = "author@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml>=6.0",
{% if cli_tool == "click" %}
    "click>=8.0.0",
{% elif cli_tool == "typer" %}
    "typer>=0.7.0",
{% endif %}
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.9.0",
]

[project.scripts]
{{ name }} = "{{ name }}.cli:{% if cli_tool == 'click' %}cli{% elif cli_tool == 'typer' %}app{% else %}main{% endif %}"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true